Fixed layout issues
Improvement? Make seperate steps collapseable?

--- a/VertCoin/default.css
+++ b/VertCoin/default.css
@@ -7,8 +7,8 @@ html{font-family: Calibri, Arial, sans-serif; overflow-y:scroll; min-width:1000p
 body{background-color:#111; color:#444; font-size:14px; line-height:1.5em}
 
 h1, h2, h3, h4{margin: 0 .833em; font-weight:bold; line-height:1em; }
-h1, .h1{font-size:2em}
-h2, .h2{font-size:1.6em}
+h1, .h1{font-size:2em; color: #eee;}
+h2, .h2{font-size:1.6em; color: #fff}
 h3, .h3{font-size:1.4em; font-weight:lighter}
 h4, .h4{font-size:1.2em; font-weight:lighter; font-style: italic;}
 
